# infoband

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
src/: constants.rs  defer.rs  ext.rs  factory.rs  guid.rs  lib.rs  logging.rs  macros.rs  main.rs  metrics.rs  module.rs  object.rs  opt.rs  panic.rs  perf.rs  proc.rs  refcount.rs  registry.rs  stats.rs  string.rs  util.rs  utils.rs  window.rs
src/metrics/: cpu.rs  disk.rs  memory.rs  network.rs
src/window/: awake.rs  messages.rs  metrics.rs  microphone.rs  paint.rs  position.rs  proc.rs  state.rs  timers.rs  z_order.rs
src/window/microphone/: listener.rs
src/window/position/: listener.rs
wix/: License.rtf  main.wxs
