[package]
name = "infoband"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1"
log4rs = { version = "1.0", features = ["console_appender", "file_appender"] }
log = "0.4"
windows = { version = "0.48", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
