[package]
name = "infoband"
version = "1.4.3"
authors = ["Erik Desjardins <erikdesjardins@users.noreply.github.com>"]
description = "Windows \"DeskBand\" displaying cpu/mem/disk/network info."
repository = "https://github.com/erikdesjardins/infoband"
license = "MIT"
edition = "2021"

[build-dependencies]
embed-manifest = "1.4"

[dependencies]
argh = "0.1"
log4rs = { version = "1.0", default-features = false, features = ["console_appender", "file_appender"] }
log = "0.4"
memoffset = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_ProcessStatus",
    "Win32_System_RemoteDesktop",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
