[package]
name = "infoband"
version = "1.5.1"
authors = ["Erik Desjardins <erikdesjardins@users.noreply.github.com>"]
description = "Windows \"DeskBand\" displaying cpu/mem/disk/network info."
repository = "https://github.com/erikdesjardins/infoband"
license = "MIT"
edition = "2024"

[build-dependencies]
embed-manifest = "1.4"

[dependencies]
argh = "0.1"
log4rs = { version = "1.0", default-features = false, features = ["console_appender", "file_appender"] }
log = { version = "0.4", features = ["release_max_level_info"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_ProcessStatus",
    "Win32_System_RemoteDesktop",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = { version = "0.60", default-features = false } # Needed only for #[implement(ComInterface)].

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
